# HITSZ-G314-project-capacitance-measurement-module

./: README.md
Hardware/: README.md
Hardware/fpc design for cap electrode/: FPC-60deg.PcbDoc  FPC-v2.PcbDoc  FPC-v3.1.SchDoc  FPC-v3.2.PcbDoc  FPC-v3.2.SchDoc  FPC-v3.PcbDoc  FPC-v4.0.PcbDoc  FPC-v4.0.SchDoc  FPC-v4.2.PcbDoc  README.md  fpc电极v2.dwg  fpc电极v3.1.dwg  fpc电极v3.2.dwg  fpc电极v3.dwg  fpc电极v4.0.dwg  fpc电极v4.1.dwg  fpc电极v4.1_recover.dwg  fpc电极v4.2.dwg
Hardware/v0.1/: CDC-Module.PrjPcb  PCB1.PcbDoc  Sheet1.SchDoc
Hardware/v1.1/: MCS-CDCUnit.PrjPcb  Sheet1.SchDoc
Hardware/v1.2/: MAS-CDCUnit.PrjPcb  mas-cdc.PcbDoc  mas-cdc.SchDoc
Reference/: Desktop.rar  固件.rar
Reference/Cuptime2_I2C_PCAP04_Pcap04通信参考_源码/Cuptime2_I2C/: CMakeLists.txt  Cuptime2.eww  Cuptime2_I2C.dep  Cuptime2_I2C.ewp  Cuptime2_I2C.ewt  I2C.c  I2C.h  main.c  pcap04.c  pcap04.h  usart1.c  usart1.h
Reference/Cuptime2_I2C_PCAP04_Pcap04通信参考_源码/Cuptime2_I2C/config/: Cuptime2_ram.txt
Reference/PCAP04-main/PCB/PCAP04_Interface/: PCAP04-IC.kicad_sch  (+2 more)
Reference/PCAP04-main/PlatformIO/PCAP04/: CMakeLists.txt
Reference/PCAP04-main/PlatformIO/PCAP04/lib/pcap04IIC/src/: PCAP04IIC.cpp
Reference/cn0552-designsupport/CN0552-DesignSupport/: AD7746.url  AD8515.url  ADICUP3029 User Guide.url  ADICUP3029.url  CN0552 Allegro.brd  CN0552 BOM.csv  CN0552 User Guide.url  CN0552 Web Page.url
Software/: README.md
Software/v1.1-MCS-Unit/: .cproject  .project  CMakeLists.txt  MCS-Unit.ioc  st_nucleo_f4.cfg
Software/v1.2-MAS-Unit/: .cproject  .project  CMakeLists.txt  MAS-Unit.ioc  STM32F411CEUX_RAM.ld
(+48 files in other folders)
